--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Final-Neural-Network/lib/commons-cli-1.4/commons-cli-1.4-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
